configuracion de mysql, rabbit y la aplicacion de express y conexion de todo

--- a/04-plantilla/compose.yml
+++ b/04-plantilla/compose.yml
@@ -39,6 +39,21 @@ services:
       timeout: 10s
       retries: 3
       start_period: 5s
+  rabbitmq:
+    image: rabbitmq:management-alpine
+    container_name: rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      interval: 10s
+      timeout: 30s
+      retries: 3
+      start_period: 20s
+    networks:
+      - net-course
   app: 
     build:
       context: . # carpeta raiz del proyecto
@@ -59,8 +74,8 @@ services:
     depends_on:
       mysql-server:
         condition: service_healthy # me indica que ya el servicio esta corriendo
-
-
+      rabbitmq:
+        condition: service_healthy      
 volumes:
   vol-mysql:
 
