--- a/04-plantilla/package.json
+++ b/04-plantilla/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.12",
