Solucion de un error bastante extraño de conexion con el contenedor de mysql server. Investigar porque si el mysql server se conecta internamente por el puerto 3306 y externamente por el 3307 porque solo permite conexion por el puerto externo 3306

--- a/04-plantilla/Dockerfile
+++ b/04-plantilla/Dockerfile
@@ -22,5 +22,6 @@ RUN apk add curl
 COPY --from=stage_deps /app/node_modules ./node_modules
 COPY --from=stage_build /app/dist ./dist
 COPY package.json .
+COPY .env   .
 USER node
 CMD npm run start
