--- a/04-plantilla/.env
+++ b/04-plantilla/.env
@@ -1,6 +1,6 @@
 APP_PORT=3000
-MYSQL_HOST=localhost
-MYSQL_PORT=3307
+MYSQL_HOST="mysql-server"
+MYSQL_PORT=3306
 MYSQL_DATABASE= db
 MYSQL_USER= user
 MYSQL_PASSWORD= 12345
@@ -9,4 +9,4 @@ MYSQL_LOGGING=true
 MYSQL_ENTITIES=src/**infraestructure/**/*.entity.ts
 MYSQL_POOL_SIZE=10
 MYSQL_MAX_QUERY_EXECUTION_TIME=10000
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=rabbitmq
