--- a/04-plantilla/package.json
+++ b/04-plantilla/package.json
@@ -17,6 +17,7 @@
     "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "gulp": "^5.0.0",
@@ -39,6 +40,7 @@
     "ioredis": "^5.4.1",
     "mysql2": "^3.10.1",
     "neverthrow": "^6.2.2",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^10.0.0"
   }
 }
