funciones de crear obtener por id y todos en modulo productos

--- a/04-plantilla/.env
+++ b/04-plantilla/.env
@@ -6,7 +6,7 @@ MYSQL_USER= user
 MYSQL_PASSWORD= 12345
 MYSQL_SYNCHRONIZE=true
 MYSQL_LOGGING=true
-MYSQL_ENTITIES=src/**infraestructure/**/*.entity.ts
+MYSQL_ENTITIES=src/**/infraestructure/**/*.entity.ts
 MYSQL_POOL_SIZE=10
 MYSQL_MAX_QUERY_EXECUTION_TIME=10000
 RABBITMQ_HOST=localhost
