--- a/04-plantilla/package.json
+++ b/04-plantilla/package.json
@@ -41,6 +41,8 @@
     "ioredis": "^5.3.2",
     "mysql2": "^3.6.5",
     "neverthrow": "^6.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   }
