--- a/05-appointment/01-user/package.json
+++ b/05-appointment/01-user/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/amqplib": "^0.10.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.10",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
