configurar nombres de archivos en las capas del servicio de auth y patron adaptador para axios http

--- a/05-appointment/02-auth/.env
+++ b/05-appointment/02-auth/.env
@@ -1,4 +1,4 @@
-PORT=3000
+PORT=3010
 MYSQL_HOST=localhost
 MYSQL_PORT=3307
 MYSQL_DATABASE= db
@@ -14,5 +14,6 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=12345
 REDIS_MAX_RETRIES_PER_REQUEST=20
+API_GET_USER=http://localhost:3000/user/v1/user-by-email
 # para crear la imagen de app debo cambiar localhost por el nombre del servicio para mysql, redis y rabbitmq y mysql server poner su puerto a 3306 
 # que es el interno del contenedor de mysql-server
