--- a/05-appointment/02-auth/package.json
+++ b/05-appointment/02-auth/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
