--- a/05-appointment/02-auth/package.json
+++ b/05-appointment/02-auth/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.10.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -42,6 +43,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "neverthrow": "^6.1.0",
     "swagger-jsdoc": "^6.2.8",
