--- a/05-appointment/03-appoinment/.env
+++ b/05-appointment/03-appoinment/.env
@@ -1,4 +1,4 @@
-PORT=3000
+PORT=3020
 MYSQL_HOST=localhost
 MYSQL_PORT=3307
 MYSQL_DATABASE= db
@@ -14,5 +14,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=12345
 REDIS_MAX_RETRIES_PER_REQUEST=20
+RABBITMQ_EXCHANGE_NAME=appointment
+RABBITMQ_EXCHANGE_TYPE=direct
+RABBITMQ_EXCHANGE_NAME_ERROR=appointment_error
 # para crear la imagen de app debo cambiar localhost por el nombre del servicio para mysql, redis y rabbitmq y mysql server poner su puerto a 3306 
 # que es el interno del contenedor de mysql-server
