--- a/05-appointment/04-appoinment-co/.env
+++ b/05-appointment/04-appoinment-co/.env
@@ -1,4 +1,4 @@
-PORT=3020
+PORT=3030
 MYSQL_HOST=localhost
 MYSQL_PORT=3307
 MYSQL_DATABASE= db
@@ -17,6 +17,7 @@ REDIS_MAX_RETRIES_PER_REQUEST=20
 RABBITMQ_EXCHANGE_NAME=appointment
 RABBITMQ_EXCHANGE_TYPE=direct
 RABBITMQ_EXCHANGE_NAME_ERROR=appointment_error
+RABBITMQ_ROUTING_KEY=CO
 RABBITMQ_ROUTING_KEY_MESSAGE_CONFIRMED=message_confirmed
 # para crear la imagen de app debo cambiar localhost por el nombre del servicio para mysql, redis y rabbitmq y mysql server poner su puerto a 3306 
 # que es el interno del contenedor de mysql-server
